# ReboSlime

./: LICENSE  README.en.md  README.md  README.zh.md  config.json  pyproject.toml  reboslime.py
.github/workflows/: build-and-release.yml
libs/rebocap/: Readme.md  Readme_ja.md
