[tool.poetry]
name = "reboslime"
version = "0.1.1"
description = "a customized version forked from Colanns <mycolands@gmail.com>"
authors = ["Daniel81i"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
rich = "^13.7.1"
pyinstaller = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
